<resources>
    <string name="app_name">new project</string>
    <string name="title">ZERO HUNGER</string>
    <string name="name">DONOR NAME</string>
    <string name="fooditem">FOOD ITEM</string>
    <string name="quantity">QUANTITY</string>
    <string name="fodtiming">FOOD TIMING</string>
    <string name="address">ADDRESS</string>
    <string name="date">DATE OF PREPARATION</string>
    <string name="time">TIME OF PREPARATION</string>

</resources>